<resources>
    <string name="app_name">学程通</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">直播</string>
    <string name="title_notifications">生活</string>
    <string name="title_person">我的</string>

    <string name="strCom1">Copyright ©2017</string>
    <string name="strCom2">广东快乾教育有限公司</string>

    <string name="aboutUs">广东快乾教育有限公司自成立以来，一直致力于各类职业院校的招生工作，我们与多家职业院校建立了长期合作关系，为学校的生源提供有力的帮助。同时为学生的择校、学习和就业提供一站式全方位服务。我们系统有海量的学府、人性化的生活消费服务和就业机会供你选择，为你的学程保驾护航。</string>

    <!-- 订单状态-->
    <string name="userOrderTip">报名订单</string>
    <string name="userOrderState1">待付款</string>
    <string name="userOrderState2">已预订</string>
    <string name="userOrderState3">已完成</string>

    <!-- 订单状态-->
    <string name="userResumeTip">我的就业</string>
    <string name="userResume1">我的简历</string>
    <string name="userResume2">刷新简历</string>
    <string name="userResume3">投递反馈</string>

    <!-- 订单状态-->
    <string name="userStrip1">我的积分</string>
    <string name="userStrip2">系统通知</string>
    <string name="userStrip3">版本信息</string>
    <string name="userStrip4">修改密码</string>
    <string name="userStrip5">退出登录</string>
    <string name="userStrip6">关于我们</string>

    <string name="recruitFun1">择校</string>
    <string name="recruitFun2">学习</string>
    <string name="recruitFun3">就业</string>
    <string name="hotUniversity">热门院校</string>
    <string name="hotUniMajor">热门专业</string>

    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="major">专业</string>

    <string name="space">地　　区:</string>
    <string name="discipline">学科门类:</string>
    <string name="majorType">意向专业:</string>
    <string name="testType">考试类型:</string>
    <string name="testAccount">考试分数:</string>
    <string name="tuitionRange">学费范围:</string>

    <string name="labSchool1">院校简介</string>
    <string name="labSchool2">学校全景</string>
    <string name="labSchool3">院系介绍</string>
    <string name="labSchool4">师资力量</string>
    <string name="labSchool5">院系专业</string>
    <string name="labSchool6">预约看校</string>
    <string name="labSchool7">视频宣传</string>
    <string name="labSchool8">专业报名</string>

    <string name="panoramaStrip1">360度校园全景</string>
    <string name="panoramaStrip2">食堂</string>
    <string name="panoramaStrip3">宿舍</string>
    <string name="panoramaStrip4">教室</string>
    <string name="panoramaStrip5">运动场所</string>
    <string name="panoramaStrip6">周边环境</string>

    <string name="strCall">请您拨打招生咨询电话：</string>

    <string name="visitNote">稍后我们会有专人与您联系。</string>

    <string name="sure">确定</string>
    <string name="call">呼叫</string>
    <string name="cancel">取消</string>
    <string name="noUpdate">以后再说</string>
    <string name="update">立即更新</string>

    <string name="training">培训机构</string>
    <string name="study">进修学校</string>

    <string name="majorFun1">开课计划</string>
    <string name="majorFun2">在线试听</string>
    <string name="majorFun3">在线报名</string>

    <string name="lifeFun1">快乾公益</string>
    <string name="lifeFun2">圈子活动</string>
    <string name="lifeFun3">助学金</string>
    <string name="lifeFun4">社区服务</string>
    <string name="lifeFun5">生活缴费</string>
    <string name="lifeFun6">孵化器</string>

    <string name="schoolOrder">预约看校</string>
    <string name="schoolCall1">电话咨询</string>

</resources>
