<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_recruit"
        android:icon="@drawable/ic_home_black_24dp"
        android:checked="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_life"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/ic_child_care_black_24dp"
        android:title="@string/title_notifications" />

</menu>
