<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.zty.baselib.widget.StripMenuView
        android:id="@+id/strip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:imgSrc="@mipmap/ic_person_integer"
        app:isHasBottomLine="false"
        app:isHasTopLine="false"
        app:lineMargin="16"
        app:textName="@string/userStrip1"
        app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

    <cn.zty.baselib.widget.StripMenuView
        android:id="@+id/strip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:imgSrc="@mipmap/ic_person_notice"
        app:isHasBottomLine="true"
        app:isHasTopLine="false"
        app:lineMargin="16"
        app:textName="@string/userStrip2"
        app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

    <cn.zty.baselib.widget.StripMenuView
        android:id="@+id/strip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:imgSrc="@mipmap/ic_person_version"
        app:isHasBottomLine="true"
        app:isHasTopLine="false"
        app:lineMargin="16"
        app:textName="@string/userStrip3"
        app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

    <cn.zty.baselib.widget.StripMenuView
        android:id="@+id/strip4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:imgSrc="@mipmap/ic_person_password"
        app:isHasBottomLine="true"
        app:isHasTopLine="false"
        app:lineMargin="16"
        app:textName="@string/userStrip4"
        app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

    <cn.zty.baselib.widget.StripMenuView
        android:id="@+id/strip5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:imgSrc="@mipmap/ic_person_exit"
        app:isHasBottomLine="true"
        app:isHasTopLine="false"
        app:lineMargin="16"
        app:textName="@string/userStrip5"
        app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDiver"></View>

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp"></View>

</LinearLayout>