<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:text="@string/userOrderTip"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDiver" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.baselib.widget.LabView
                android:id="@+id/labOrder1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_launcher_round"
                app:lab_text="@string/userOrderState1"></cn.zty.baselib.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.baselib.widget.LabView
                android:id="@+id/labOrder2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_launcher_round"
                app:lab_text="@string/userOrderState2"></cn.zty.baselib.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.baselib.widget.LabView
                android:id="@+id/labOrder3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_launcher_round"
                app:lab_text="@string/userOrderState3"></cn.zty.baselib.widget.LabView>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDiver" />

</LinearLayout>