<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSchoolGate"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@mipmap/ic_school_default" />

            <cn.zty.baselib.widget.StripMenuView
                android:id="@+id/panoramaStrip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:imgSrc="@mipmap/ic_panorama1"
                app:isHasBottomLine="false"
                app:isHasTopLine="false"
                app:lineMargin="16"
                app:textName="@string/panoramaStrip1"
                app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

            <include layout="@layout/dotted_line" />

            <cn.zty.baselib.widget.StripMenuView
                android:id="@+id/panoramaStrip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imgSrc="@mipmap/ic_panorama2"
                app:isHasBottomLine="false"
                app:isHasTopLine="false"
                app:lineMargin="16"
                app:textName="@string/panoramaStrip2"
                app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

            <include layout="@layout/dotted_line" />

            <cn.zty.baselib.widget.StripMenuView
                android:id="@+id/panoramaStrip3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imgSrc="@mipmap/ic_panorama3"
                app:isHasBottomLine="false"
                app:isHasTopLine="false"
                app:lineMargin="16"
                app:textName="@string/panoramaStrip3"
                app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>


            <cn.zty.baselib.widget.StripMenuView
                android:id="@+id/panoramaStrip4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:imgSrc="@mipmap/ic_panorama4"
                app:isHasBottomLine="false"
                app:isHasTopLine="false"
                app:lineMargin="16"
                app:textName="@string/panoramaStrip4"
                app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

            <include layout="@layout/dotted_line" />

            <cn.zty.baselib.widget.StripMenuView
                android:id="@+id/panoramaStrip5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imgSrc="@mipmap/ic_panorama5"
                app:isHasBottomLine="false"
                app:isHasTopLine="false"
                app:lineMargin="16"
                app:textName="@string/panoramaStrip5"
                app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

            <include layout="@layout/dotted_line" />

            <cn.zty.baselib.widget.StripMenuView
                android:id="@+id/panoramaStrip6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imgSrc="@mipmap/ic_panorama6"
                app:isHasBottomLine="false"
                app:isHasTopLine="false"
                app:lineMargin="16"
                app:textName="@string/panoramaStrip6"
                app:textNameColor="@color/textColor"></cn.zty.baselib.widget.StripMenuView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDiver"></View>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"></View>

        </LinearLayout>
    </ScrollView>


</LinearLayout>