<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <cn.zty.recruit.widget.LabView
            android:id="@+id/btnRecruitFun1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lab_img="@mipmap/ic_recruit_fun1"
            app:lab_text="@string/recruitFun1"></cn.zty.recruit.widget.LabView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <cn.zty.recruit.widget.LabView
            android:id="@+id/btnRecruitFun2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lab_img="@mipmap/ic_recruit_fun2"
            app:lab_text="@string/recruitFun2"></cn.zty.recruit.widget.LabView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <cn.zty.recruit.widget.LabView
            android:id="@+id/btnRecruitFun3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lab_img="@mipmap/ic_recruit_fun3"
            app:lab_text="@string/recruitFun3"></cn.zty.recruit.widget.LabView>
    </LinearLayout>

</LinearLayout>