<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labSchool1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_school_lab1"
                app:lab_text="@string/labSchool1"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labSchool2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_school_lab2"
                app:lab_text="@string/labSchool2"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labSchool3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_school_lab7"
                app:lab_text="@string/labSchool7"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="32dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labSchool4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_school_lab4"
                app:lab_text="@string/labSchool4"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labSchool5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_school_lab8"
                app:lab_text="@string/labSchool8"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>