<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    android:paddingBottom="32dp"
    android:paddingTop="32dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <cn.zty.recruit.widget.LabView
            android:id="@+id/labMajorFun1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lab_img="@mipmap/ic_major_fun1"
            app:lab_text="@string/majorFun1"></cn.zty.recruit.widget.LabView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <cn.zty.recruit.widget.LabView
            android:id="@+id/labMajorFun2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lab_img="@mipmap/ic_major_fun2"
            app:lab_text="@string/majorFun2"></cn.zty.recruit.widget.LabView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <cn.zty.recruit.widget.LabView
            android:id="@+id/labMajorFun3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lab_img="@mipmap/ic_major_fun3"
            app:lab_text="@string/majorFun3"></cn.zty.recruit.widget.LabView>
    </LinearLayout>

</LinearLayout>