<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginHeight"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="快乾服务"
            android:textColor="@color/textColor"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorDiver"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labLife1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_life_fun1"
                app:lab_text="@string/lifeFun1"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labLife2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_life_fun2"
                app:lab_text="@string/lifeFun2"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labLife3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_life_fun3"
                app:lab_text="@string/lifeFun3"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labLife4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_life_fun4"
                app:lab_text="@string/lifeFun4"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labLife5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_life_fun5"
                app:lab_text="@string/lifeFun5"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labLife6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_life_fun6"
                app:lab_text="@string/lifeFun6"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>