<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="6dp"
            android:gravity="center_vertical"
            android:text="@string/userResumeTip"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labResume1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_resume1"
                app:lab_text="@string/userResume1"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labResume2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_resume2"
                app:lab_text="@string/userResume2"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <cn.zty.recruit.widget.LabView
                android:id="@+id/labResume3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lab_img="@mipmap/ic_resume3"
                app:lab_text="@string/userResume3"></cn.zty.recruit.widget.LabView>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>