<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/strCall"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textSchoolPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:text="0376-5632145" />

    <TextView
        android:id="@+id/textCallTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="咨询时间：09:00 - 17:00"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnNotCall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:background="#ff6795"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnCall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#3ad5b3"
            android:text="@string/call"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>