<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSchoolSelect"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/colorBackground"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingTop="4dp">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white">

        <TextView
            android:id="@+id/textProvinceTip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/ic_arrow_down"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:text="@string/province"
            android:textColor="@color/textColor"
            android:textSize="14sp" />
    </FrameLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:background="@color/colorDiver"></View>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white">

        <TextView
            android:id="@+id/textCityTip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/ic_arrow_down"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:text="@string/city"
            android:textColor="@color/textColor"
            android:textSize="14sp" />
    </FrameLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:background="@color/colorDiver"></View>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white">

        <TextView
            android:id="@+id/textMajorTip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/ic_arrow_down"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:text="@string/major"
            android:textColor="@color/textColor"
            android:textSize="14sp" />
    </FrameLayout>

</LinearLayout>